--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -15,10 +15,10 @@
 <manifest	name="Português Brasileiro"
 		author="Lukas Taves"
 		updatedBy="Felipe"
-		description="Shareaza Default English Skin File"
+		description="Shareaza Default Portuguese Skin File"
 		link="http://shareaza.sourceforge.net/"
 		email="Contact(at)ShareazaProject.com"
-		version="2.3.2.0"
+		version="2.4.0.0"
 		type="Language"
 		language="pt-br"
 		prompt="Clique aqui para traduzir o Shareaza para o português do Brasil."
