Fixed Broken Languages
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@7392 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-ee.xml
+++ b/Languages/default-ee.xml
@@ -1007,7 +1007,7 @@
 		<item id="ID_DOWNLOADS_CLEAR_COMPLETE" text="_Lõpeta Jagamine"/>
 		<item id="ID_DOWNLOADS_HELP" text="_Abi..."/>
 		<separator/>
-		<item id="ID_DOWNLOADS_EDIT text="_Info..."/>
+		<item id="ID_DOWNLOADS_EDIT" text="_Info..."/>
 	</menu>
 	<menu name="CDownloadsWnd.Nothing">
 		<item id="ID_DOWNLOADS_HELP" text="_Abi..."/>
