--- a/Languages/default-gr.xml
+++ b/Languages/default-gr.xml
@@ -2614,6 +2614,8 @@
 	<string id="8010" value="Αυτή είναι μία έκδοση προδημοσίευσης του Shareaza και η περίοδος δοκιμών έληξε. Παρακαλώ λέβετ την πλήρη επίσημη έκδοση από το http://shareaza.sourceforge.net/."/>
 	<string id="8011" value="Η αλλαγή της προβολής θα κλείσει ό,τι παράθυρα έχετε ανοιχτά. Θέλετε να γίνει τώρα;"/>
 	<string id="8012" value="Πληροφορίες Torrent"/>
+	<string id="8013" value="Δεν Shareaza νέα έκδοση που εντοπίστηκαν."/>
+	<string id="8014" value="Download Properties"/>
 	<string id="8060" value="Λειτουργία Κόμβου/Ultrapeer με %lu γείτονες. %s στην τοπική Βιβλιοθήκη."/>
 	<string id="8061" value="Λειτουργία Ultrapeer με %lu γείτονες. %s στην τοπική Βιβλιοθήκη."/>
 	<string id="8062" value="Λειτουργία Κόμβου με %lu γείτονες. %s στην τοπική Βιβλιοθήκη."/>
