--- a/Languages/default-ee.xml
+++ b/Languages/default-ee.xml
@@ -2540,6 +2540,8 @@
 	<string id="8010" value="See on Shareaza eelversioon ja beta testid on lõppenud.  Tõmba täis-, ametlik versioon http://shareaza.sourceforge.net/."/>
 	<string id="8011" value="Vaadete muutmine sulgeb kõik avatud aknad.  Kas soovid kohe muuta?"/>
 	<string id="8012" value="Torrenti Informatsioon"/>
+	<string id="8013" value="No new Shareaza version detected."/>
+	<string id="8014" value="Download Properties"/>
 	<string id="8060" value="Hub/Ultrapeer mode with %lu neighbour(s).  %s kohalikus raamatukogus."/>
 	<string id="8061" value="Ultrapeer mode with %lu neighbour(s).  %s kohalikus raamatukogus."/>
 	<string id="8062" value="Hub mode with %lu neighbour(s).  %s kohalikus raamatukogus."/>
