--- a/Languages/default-fr.xml
+++ b/Languages/default-fr.xml
@@ -2620,6 +2620,7 @@
 	<string id="8010" value="Ceci est une pré-distribution de Shareaza, et la période de test est terminée. Merci de télécharger la version complète et officielle à partir de http://shareaza.sourceforge.net/."/>
 	<string id="8011" value="Changer de vue fermera toutes les fenêtres ouvertes actuellement. Voulez-vous changer la vue maintenant&#160;?"/>
 	<string id="8012" value="Information Torrent"/>
+	<string id="8013" value="Pas de nouveaux Shareaza version détectée."/>
 	<string id="8014" value="Propriétés du téléchargement"/>
 	<string id="8060" value="En mode Hub/Ultrapeer avec %lu voisin(s). %s dans votre bibliothèque locale."/>
 	<string id="8061" value="En mode Ultrapeer avec %lu voisin(s). %s dans votre bibliothèque locale."/>
