--- a/Languages/default-lt.xml
+++ b/Languages/default-lt.xml
@@ -2630,6 +2630,7 @@
 	<string id="8010" value="Tai priešišleidžiamoji „Shareaza“ versija, beta testavimo periodas baigėsi. Parsisiųskite pilną oficialią programos laidą iš http://shareaza.sourceforge.net/."/>
 	<string id="8011" value="Pakeitus peržiūros būdą, visi atverti langai bus uždaryti. Ar norite keisti tuoj pat?"/>
 	<string id="8012" value="Torrent informacija"/>
+	<string id="8013" value="Nėra naujų Shareaza versija aptikti."/>
 	<string id="8014" value="Atsisiunčiamo failo savybės"/>
 	<string id="8060" value="Mazgas/Vedančiojo veiksena su %lu kaimynais(-ų). %s asmeninėje kolekcijoje."/>
 	<string id="8061" value="Vedančiojo veiksena su %lu kaimynais(-ų). %s asmeninėje kolekcijoje."/>
