--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -2555,6 +2555,8 @@
 	<string id="8010" value="Dit is een voor-distributie versie van Shareaza en de beta periode is afgelopen. Download alsjeblieft de volledige, officiële distributie vanaf http://shareaza.sourceforge.net/."/>
 	<string id="8011" value="Als je van stijl verandert, worden alle geopende vensters gesloten. Wil je nu veranderen?"/>
 	<string id="8012" value="Torrent Informatie"/>
+	<string id="8013" value="Geen nieuwe versie van Shareaza ontdekt."/>
+	<string id="8014" value="Download eigenschappen"/>
 	<string id="8060" value="Hub/Ultrapeer Modus met %lu buurman(nen).  %s in lokale bibliotheek."/>
 	<string id="8061" value="Ultrapeer Modus met %lu buurman(nen). %s in lokale bibliotheek."/>
 	<string id="8062" value="Hub Modus met %lu buurmannen. %s in lokale bibliotheek."/>
