--- a/Languages/default-sr.xml
+++ b/Languages/default-sr.xml
@@ -2484,6 +2484,9 @@
 	<string id="8009" value="Jeste li sigurni da želite izbrisati &quot;%s&quot; skin?Ne može se povratiti."/>
 	<string id="8010" value="Ovo je test verzija Shareaze, i period beta testiranja je završio.Molimo vas da skinete celo, službeno izdanje sa http://shareaza.sourceforge.net/."/>
 	<string id="8011" value="Menjanje pogleda zatvara sve otvorene prozore. Želite li nastaviti s promenom pogleda?"/>
+	<string id="8012" value="Torrent informacije"/>
+	<string id="8013" value="Нема нових Схареаза верзији откривена."/>
+	<string id="8014" value="Podešavanja Skidam"/>
 	<string id="8060" value="Hub/Ultrapeer način sa %lu suseda.%s u vašoj kolekciji."/>
 	<string id="8061" value="Ultrapeer način sa %lu suseda.%s u vašoj kolekciji."/>
 	<string id="8062" value="Hub način sa %lu suseda.%s u vašoj kolekciji."/>
