--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -2620,7 +2620,7 @@
 	<string id="8010" value="Esta é uma versão de pré-lançamento do Shareaza e o período de testes beta acabou. Por favor baixar a versão completa oficial de http://shareaza.sourceforge.net/."/>
 	<string id="8011" value="Mudar a visualização fechará quaisquer janelas que estejam abertas. Você gostaria de mudar agora?"/>
 	<string id="8012" value="Informação do Torrent"/>
-	<string id="8013" value="Shareaza detectou nenhuma nova versão."/>
+	<string id="8013" value="Nenhuma versão nova do shareaza detectada."/>
 	<string id="8014" value="Propriedades do Download"/>
 	<string id="8060" value="Modo Hub/Ultrapeer com %lu vizinho(s). %s na sua bilioteca local."/>
 	<string id="8061" value="Modo Ultrapeer com %lu vizinho(s). %s na sua biblioteca Local."/>
