--- a/Languages/default-tr.xml
+++ b/Languages/default-tr.xml
@@ -2601,7 +2601,7 @@
 	<string id="8010" value="Bu Shareaza'nın değiştirme öncesi programıdır ve bu beta deneme aşaması sonlanmıştır. Lütfen http://shareaza.sourceforge.net/ adresinden programın tamamını yükleyiniz."/>
 	<string id="8011" value="Görüntü Değiştirme açıldığında pencereler kapanacaktır. Şimdi değiştirmek ister misin?"/>
 	<string id="8012" value="Torrent Bilgisi"/>
-	<string id="8013" value="Hayır yeni Shareaza yorum bulmak."/>
+	<string id="8013" value="Yeni bir Shareaza sürümü henüz yoktur."/>
 	<string id="8014" value="İndirme Özellikleri"/>
 	<string id="8060" value="%lu komşusu ile Hub/Ultrapeer mod.  %s yerel kütüphanede."/>
 	<string id="8061" value="%lu komşusu ile Ultrapeer mod.  %s yerel kütüphanede."/>
